Moved credits to own folder

--- a/footer.html
+++ b/footer.html
@@ -1,47 +1,45 @@
 <!DOCTYPE html>
 <html lang="en" style="overflow: hidden">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Footer</title>
     <link rel="stylesheet" href="css/main.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <footer class="footer has-text-centered">
-      <div class="container">
-        <div class="columns">
-          <div class="column is-8-desktop is-offset-2-desktop">
-            <p>
-              <strong class="has-text-weight-semibold">
-                <a href="/credits.html">Credits</a>
+        <div class="container">
+            <div class="columns">
+                <div class="column is-8-desktop is-offset-2-desktop">
+                    <p>
+                        <strong class="has-text-weight-semibold">
+                <a href="/credits">Credits</a>
               </strong>
-            </p>
-            <p>
-              <strong class="has-text-weight-semibold">
+                    </p>
+                    <p>
+                        <strong class="has-text-weight-semibold">
                 <a href="/disclaimer_legal_and_privacy.html">
                   Disclaimer, legal and privacy
                 </a>
               </strong>
-            </p>
-            <p>
-              <small>
+                    </p>
+                    <p>
+                        <small>
                 <a href="https://gitlab.com/sakul6499.de/sakul6499.de">Source code</a> made with &hearts; and licensed under <a href="http://opensource.org/licenses/mit-license.php">MIT</a>
               </small>
-            </p>
-            <p style="margin-top: 1rem;">
-              <a href="http://bulma.io">
-                <img
-                  src="made-with-bulma.png"
-                  alt="Made with Bulma"
-                  width="128"
-                  height="24"
-                />
-              </a>
-            </p>
-          </div>
+                    </p>
+                    <p style="margin-top: 1rem;">
+                        <a href="http://bulma.io">
+                            <img src="made-with-bulma.png" alt="Made with Bulma" width="128" height="24" />
+                        </a>
+                    </p>
+                </div>
+            </div>
         </div>
-      </div>
     </footer>
-  </body>
+</body>
+
 </html>
