Moved disclaimer, legal and privacy to own folder

--- a/footer.html
+++ b/footer.html
@@ -21,7 +21,7 @@
                     </p>
                     <p>
                         <strong class="has-text-weight-semibold">
-                <a href="/disclaimer_legal_and_privacy.html">
+                <a href="/disclaimer_legal_and_privacy">
                   Disclaimer, legal and privacy
                 </a>
               </strong>
