Tooltips! (... and removed unused junk ...)

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -113,37 +113,15 @@
 
                 <h1 class="is-size-5 has-text-black">Tools I use:</h1>
                 <section class="column is-mobile is-centered tags">
-                    <a href="/skills#VCS" class="tag is-success is-large">Git</a>
+                    <a href="/skills#VCS" class="tag is-success is-large tooltip is-tooltip-multiline" data-tooltip="Git, SVN">VCS</a>
                     <a href="/skills#IDEs-and-Editor" class="tag is-info is-large">VIM</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-large">VSCode</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-large">JetBrains IDEs</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-medium">VisualStudio[Code]</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-large tooltip is-tooltip-multiline" data-tooltip="IntelliJ IDEA, Clion, DataGrip, WebStorm, PyCharm, PHPStorm, Rider">JetBrains IDEs</a>
                     <a href="/skills#IDEs-and-Editor" class="tag is-info is-medium">NetBeans</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-large" id="hover-indicator">IntelliJ
-                        IDEA</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-large hover-affected">CLion</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-large hover-affected">DataGrip</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-small hover-affected">WebStorm</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-small hover-affected">PHPStorm</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-small hover-affected">PyCharm</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-small hover-affected">Rider</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-medium">VisualStudio</a>
-                    <a href="/skills#VCS" class="tag is-success is-small">SVN</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-small">Emacs</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-small">Brackets</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-small">Sublime Text</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-small">Atom.io</a>
                     <a href="/skills#Modelling" class="tag is-danger is-small">VisualParadigm</a>
                     <a href="/skills#Modelling" class="tag is-danger is-small">UMLet</a>
-                    <a href="/skills#Modelling" class="tag is-danger is-small">Draw.io</a>
-                    <a href="/skills#Web" class="tag is-dark is-medium">NodeJS</a>
-                    <a href="/skills#Linux" class="tag is-dark is-medium">AUR</a>
-                    <a href="/skills#Office" class="tag is-warning is-medium">MS office</a>
-                    <a href="/skills#Office" class="tag is-warning is-medium">Libre/OpenOffice</a>
-                    <a href="/skills#Virtualisation" class="tag is-white is-medium">Docker</a>
-                    <a href="/skills#Virtualisation" class="tag is-white is-medium">Vagrant</a>
-                    <a href="/skills#Virtualisation" class="tag is-white is-medium">VirtualBox</a>
-                    <a href="/skills#Virtualisation" class="tag is-white is-medium">VMWare Workstation/ESXi</a>
-                    <a href="/skills#Virtualisation" class="tag is-white is-medium">libVirt</a>
+                    <a href="/skills#Office" class="tag is-warning is-medium">MS/Libre/OpenOffice</a>
+                    <a href="/skills#Virtualisation" class="tag is-white is-medium tooltip is-tooltip-multiline" data-tooltip="Docker, Vagrant, VirtualBox, VMWare products (Workstation, ESXi, ...), libVirt">Virtualisation</a>
                     <a href="/skills#IDEs-and-Editor" class="tag is-info is-small">Qt</a>
                 </section>
 
