--- a/src/html/index.html
+++ b/src/html/index.html
@@ -79,84 +79,153 @@
                 <p>Should be left</p>
             </div>
             <div class="column">
-                <u class="is-half is-family-code has-text-underlined">Skills</u>
+                <u class="is-half is-family-code has-text-underlined tooltip is-tooltip-multiline is-tooltip-active is-tooltip-info" data-tooltip="Hover over my tags!">
+                    Skills
+                </u>
 
                 <h1 class="is-size-5 has-text-black">Languages I speak:</h1>
                 <section class="column is-mobile is-centered tags">
-                    <a href="/skills#Languages" class="tag is-success is-large">German</a>
-                    <a href="/skills#Languages" class="tag is-success is-large">English</a>
-                    <a href="/skills#JVM-and-similar" class="tag is-info is-large">Java</a>
-                    <a href="/skills#Native" class="tag is-info is-large">C/C++</a>
-                    <a href="/skills#Web" class="tag is-link is-large">WEB</a>
-                    <a href="/skills#Rust" class="tag is-info is-medium">Rust</a>
-                    <a href="/skills#Office" class="tag is-dark is-medium">LaTeX</a>
-                    <a href="/skills#JVM-and-similar" class="tag is-info is-small">Kotlin</a>
-                    <a href="/skills#JVM-and-similar" class="tag is-info is-small">Groovy</a>
-                    <a href="/skills#Native" class="tag is-warning is-small">CMake</a>
-                    <a href="/skills#Web" class="tag is-link is-small">HTML5</a>
-                    <a href="/skills#Web" class="tag is-link is-small">CSS4</a>
-                    <a href="/skills#Web" class="tag is-link is-small">JS9</a>
-                    <a href="/skills#Web" class="tag is-link is-small">PHP</a>
-                    <a href="/skills#Other-Languages" class="tag is-link is-small">Ruby</a>
-                    <a href="/skills#Other-Languages" class="tag is-warning is-small">(*)SH</a>
-                    <a href="/skills#Other-Languages" class="tag is-warning is-small">Python</a>
-                    <a href="/skills#Modelling" class="tag is-warning is-small">UML</a>
-                    <a href="/skills#Modelling" class="tag is-warning is-small">Graphviz/Dot</a>
-                    <a href="/skills#Native" class="tag is-warning is-small">Make</a>
-                    <a href="/skills#Languages" class="tag is-success is-small">Dutch</a>
-                    <a href="/skills#Languages" class="tag is-success is-small">Japanese</a>
-                    <a href="/skills#JVM-and-similar" class="tag is-info is-small">C#</a>
-                    <a href="/skills#JVM-and-similar" class="tag is-info is-small">F#</a>
-                    <a href="/skills#JVM-and-similar" class="tag is-info is-small">VB</a>
-                    <a href="/skills#Native" class="tag is-info is-small">[N]ASM</a>
+                    <a href="/skills#Languages" class="tag is-success is-large tooltip is-tooltip-multiline" data-tooltip="My primary language.">
+                        German
+                    </a>
+                    <a href="/skills#Languages" class="tag is-success is-large tooltip is-tooltip-multiline" data-tooltip="My secondary language! B1 LCCI Business Certificate/B2 school english">
+                        English
+                    </a>
+                    <a href="/skills#JVM-and-similar" class="tag is-info is-large tooltip is-tooltip-multiline" data-tooltip="Java, build tools like Ant, Maven and Gradle, as well as other JVM languages like Kotlin, Groovy and Scala">
+                        Java
+                    </a>
+                    <a href="/skills#Native" class="tag is-info is-large tooltip is-tooltip-multiline" data-tooltip="The classic native language(s)/toolset(s)">
+                        C/C++
+                    </a>
+                    <a href="/skills#Web" class="tag is-link is-large tooltip is-tooltip-multiline" data-tooltip="HTML5, CSS4, JS9, PHP, Ruby, ...">
+                        WEB
+                    </a>
+                    <a href="/skills#Rust" class="tag is-info is-medium tooltip is-tooltip-multiline" data-tooltip="Rust focuses on security, while maintaining speeds similar or sometimes even better than C/C++/Native solutions!">
+                        Rust
+                    </a>
+                    <a href="/skills#Office" class="tag is-dark is-medium tooltip is-tooltip-multiline" data-tooltip="Focus on writing instead of designing office documents">
+                        LaTeX
+                    </a>
+                    <a href="/skills#Scripting-Languages" class="tag is-warning is-small tooltip is-tooltip-multiline" data-tooltip="[Z|Ba]SH, Python, Ruby, ...">
+                        Scripting languages
+                    </a>
+                    <a href="/skills#Modelling" class="tag is-warning is-small tooltip is-tooltip-multiline" data-tooltip="UML, Graphviz/Dot, ...">
+                        Modelling languages
+                    </a>
+                    <a href="/skills#Languages" class="tag is-success is-small tooltip is-tooltip-multiline" data-tooltip="I am studying in the netherlands! Basic dutch is a must, although I mainly only understand ...">
+                        Dutch
+                    </a>
+                    <a href="/skills#Languages" class="tag is-success is-small tooltip is-tooltip-multiline" data-tooltip="Not fluent but and very interesting and different language!">
+                        Japanese
+                    </a>
+                    <a href="/skills#Languages" class="tag is-success is-small tooltip is-tooltip-multiline" data-tooltip="Third language learned in school. Absolutely not fluent but I understand it on a basic level.">
+                        Spanish
+                    </a>
+                    <a href="/skills#JVM-and-similar" class="tag is-info is-small tooltip is-tooltip-multiline" data-tooltip="VC++, C#, F#, VB">
+                        .NET
+                    </a>
+                    <a href="/skills#Native" class="tag is-info is-small tooltip is-tooltip-multiline" data-tooltip="Mainly GAS (intel; gcc output) and NASM">
+                        Assembly
+                    </a>
                 </section>
 
                 <h1 class="is-size-5 has-text-black">Tools I use:</h1>
                 <section class="column is-mobile is-centered tags">
-                    <a href="/skills#VCS" class="tag is-success is-large tooltip is-tooltip-multiline" data-tooltip="Git, SVN">VCS</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-large">VIM</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-medium">VisualStudio[Code]</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-large tooltip is-tooltip-multiline" data-tooltip="IntelliJ IDEA, Clion, DataGrip, WebStorm, PyCharm, PHPStorm, Rider">JetBrains IDEs</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-medium">NetBeans</a>
-                    <a href="/skills#Modelling" class="tag is-danger is-small">VisualParadigm</a>
-                    <a href="/skills#Modelling" class="tag is-danger is-small">UMLet</a>
-                    <a href="/skills#Office" class="tag is-warning is-medium">MS/Libre/OpenOffice</a>
-                    <a href="/skills#Virtualisation" class="tag is-white is-medium tooltip is-tooltip-multiline" data-tooltip="Docker, Vagrant, VirtualBox, VMWare products (Workstation, ESXi, ...), libVirt">Virtualisation</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-small">Qt</a>
+                    <a href="/skills#VCS" class="tag is-success is-large tooltip is-tooltip-multiline" data-tooltip="Git, SVN, Hg, ...">
+                        VCS
+                    </a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-large tooltip is-tooltip-multiline" data-tooltip="IntelliJ IDEA, Clion, DataGrip, WebStorm, PyCharm, PHPStorm, Rider, ...">
+                        JetBrains IDEs
+                    </a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-medium tooltip is-tooltip-multiline" data-tooltip="VisualStudio and VisualStudioCode">
+                        VisualStudio[Code]
+                    </a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-large tooltip is-tooltip-multiline" data-tooltip="The classic CLI editor!">
+                        VIM
+                    </a>
+                    <a href="/skills#Build-Tools" class="tag is-warning is-large tooltip is-tooltip-multiline" data-tooltip="CMake, Make, QMake, Gradle, Maven, Ant, ...">
+                        Build-Tools
+                    </a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-medium tooltip is-tooltip-multiline" data-tooltip="Oracle's Java IDE">
+                        NetBeans
+                    </a>
+                    <a href="/skills#Modelling" class="tag is-danger is-small tooltip is-tooltip-multiline" data-tooltip="All-in-one modelling and management software">
+                        VisualParadigm
+                    </a>
+                    <a href="/skills#Office" class="tag is-dark is-medium tooltip is-tooltip-multiline" data-tooltip="Open source and proprietary office product solutions">
+                        MS/Libre/OpenOffice
+                    </a>
+                    <a href="/skills#Virtualization" class="tag is-white is-medium tooltip is-tooltip-multiline" data-tooltip="Docker, Vagrant, VirtualBox, VMWare products (Workstation, ESXi), libVirt/QEMU, Kubernetes, ...">
+                        Virtualization
+                    </a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-small tooltip is-tooltip-multiline" data-tooltip="Powerful C++ cross-platform IDE and SDK">
+                        Qt
+                    </a>
                 </section>
 
                 <h1 class="is-size-5 has-text-black">Frameworks I am familiar with:</h1>
                 <section class="column is-mobile is-centered tags">
-                    <a href="/skills#Test-Driven-Development" class="tag is-info is-medium">JUnit</a>
-                    <a href="/skills#Test-Driven-Development" class="tag is-info is-medium">Mockito</a>
-                    <a href="/skills#Test-Driven-Development" class="tag is-info is-medium">RestAssured</a>
-                    <a href="/skills#Test-Driven-Development" class="tag is-success is-medium">gTest</a>
-                    <a href="/skills#Web" class="tag is-warning is-medium">Bulma</a>
-                    <a href="/skills#Web" class="tag is-warning is-medium">Bootstrap</a>
-                    <a href="/skills#Web" class="tag is-info is-medium">Spring</a>
+                    <a href="/skills#Test-Driven-Development" class="tag is-info is-medium tooltip is-tooltip-multiline" data-tooltip="Standard unit and integration testing library and suite for Java based languages">
+                        JUnit
+                    </a>
+                    <a href="/skills#Test-Driven-Development" class="tag is-info is-medium tooltip is-tooltip-multiline" data-tooltip="Mockito extends JUnit with useful additions and prevents overhead while testing">
+                        Mockito
+                    </a>
+                    <a href="/skills#Test-Driven-Development" class="tag is-info is-medium tooltip is-tooltip-multiline" data-tooltip="RESTAssured extends JUnit by providing easy ways to test and validate REST API server and clients">
+                        RESTAssured
+                    </a>
+                    <a href="/skills#Test-Driven-Development" class="tag is-success is-medium tooltip is-tooltip-multiline" data-tooltip="Standard unit and integration testing library and suite for C/C++ based languages">
+                        gTest
+                    </a>
+                    <a href="/skills#Web" class="tag is-warning is-medium tooltip is-tooltip-multiline" data-tooltip="An awesome open-source framework for building websites with flex and other tools, which is also highly extendable and modifiable. This website is build with it! Similar to bootstrap.">
+                        Bulma
+                    </a>
+                    <a href="/skills#Web" class="tag is-warning is-medium tooltip is-tooltip-multiline" data-tooltip="Responsive, mobile-first, framework for website projects. Similar to Bulma.">
+                        Bootstrap
+                    </a>
+                    <a href="/skills#Web" class="tag is-info is-medium tooltip is-tooltip-multiline" data-tooltip="An easy to use, highly optimized, Java WebServer with many possibilities">
+                        Spring.io
+                    </a>
                 </section>
 
                 <h1 class="is-size-5 has-text-black">Operating Systems I work on:</h1>
                 <section class="column is-mobile is-centered tags">
-                    <a href="/skills#Linux" class="tag is-link is-large">Linux</a>
-                    <a href="/skills#Linux" class="tag is-link is-large">ArchLinux</a>
-                    <a href="/skills#Linux" class="tag is-link is-large">Manjaro</a>
-                    <a href="/skills#Hacking" class="tag is-danger is-small">ParrotOS</a>
-                    <a href="/skills#Hacking" class="tag is-danger is-small">KaliLinux</a>
-                    <a href="/skills#Linux" class="tag is-link is-small">Ubuntu</a>
-                    <a href="/skills#Other-Systems" class="tag is-warning is-medium">Windows</a>
-                    <a href="/skills#Other-Systems" class="tag is-warning is-small">Mac OSx</a>
+                    <a href="/skills#Linux" class="tag is-link is-large tooltip is-tooltip-multiline" data-tooltip="Mainly ArchLinux/Manjaro but also other distribution like Ubuntu, Alpine, CentOS, Fedora and much more ...">
+                        Linux
+                    </a>
+                    <a href="/skills#Hacking" class="tag is-danger is-small tooltip is-tooltip-multiline" data-tooltip="Linux based distribution, made for security testing and hacking">
+                        ParrotOS
+                    </a>
+                    <a href="/skills#Hacking" class="tag is-danger is-small tooltip is-tooltip-multiline" data-tooltip="Linux based distribution, made for security testing and hacking">
+                        KaliLinux
+                    </a>
+                    <a href="/skills#Other-Systems" class="tag is-warning is-medium tooltip is-tooltip-multiline" data-tooltip="Microsoft's operating system. While not being a huge fan of it I still use it often.">
+                        Windows
+                    </a>
+                    <a href="/skills#Other-Systems" class="tag is-warning is-small tooltip is-tooltip-multiline" data-tooltip="Apple's operating system. Very similar to Linux; sometimes porting applications there.">
+                        Mac OS X
+                    </a>
                 </section>
 
                 <h1 class="is-size-5 has-text-black">Other topics I am interested in:</h1>
                 <section class="column is-mobile is-centered tags">
-                    <a href="/skills#Hacking" class="tag is-danger is-large">Hacking</a>
-                    <a href="/skills#IoT" class="tag is-success is-large">IoT</a>
-                    <a href="/skills#Graphics" class="tag is-info is-large">Game Design</a>
-                    <a href="/skills#Graphics" class="tag is-info is-large">3D Modelling</a>
+                    <a href="/skills#Hacking" class="tag is-danger is-large tooltip is-tooltip-multiline" data-tooltip="I like to find bugs and security problems in existing and still developing systems to then fix or report them. Activities include Pen-Testing and CTFs.">
+                        Hacking
+                    </a>
+                    <a href="/skills#IoT" class="tag is-success is-large tooltip is-tooltip-multiline" data-tooltip="'Internet of Things' devices are electronics that are connected with the internet">
+                        IoT
+                    </a>
+                    <a href="/skills#Games" class="tag is-info is-large tooltip is-tooltip-multiline" data-tooltip="I really enjoy having no creative limits and simply create something others might like. Sadly I haven't finished any game yet ...">
+                        Game Development
+                    </a>
+                    <a href="/skills#Graphics" class="tag is-info is-large tooltip is-tooltip-multiline" data-tooltip="Being creative is one of my">
+                        3D Modelling / Design
+                    </a>
                 </section>
 
-                <a href="/skills" class="has-text-grey">And much more ...</a>
+                <a href="/skills" class="has-text-grey tooltip is-tooltip-danger" data-tooltip="Click to see more!">
+                    And much more ...
+                </a>
             </div>
         </div>
     </section>
