Removed style tag from index

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -73,7 +73,7 @@
     </section>
     <section class="section" id="about-me">
         <div class="columns has-text-centered">
-            <div class="column" style="border-right: solid black;">
+            <div class="column" id="about-me">
                 <u class="is-half is-family-code has-text-underlined">About me</u>
                 <p>CONTENT GOES HERE</p>
                 <p>Should be left</p>
