Renamed js module

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -320,9 +320,9 @@
     <include>footer.html</include>
 
     <!-- Dots.JS for animating the main page -->
-    <script async type="module" src="/js/dots/rust_wasm_dots.js"></script>
+    <script async type="module" src="/js/dots/dots.js"></script>
     <script type="module">
-        import init from '/js/dots/rust_wasm_dots.js'; 
+        import init from '/js/dots/dots.js'; 
         
         (async() => {
             await init();
