--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,9 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Sakul6499 | Lukas Weber" />
     <meta
-      name="description"
-      content="Sakul6499 | Lukas Weber"
-    />
-    <meta 
-      http-equiv="Content-Security-Policy" 
+      http-equiv="Content-Security-Policy"
       content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' ajax.cloudflare.com;"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
