--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Sakul6499 | Lukas Weber" />
-    <meta
-            http-equiv="Content-Security-Policy"
-            content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' ajax.cloudflare.com; script-src-elem 'self' 'unsafe-inline' 'unsafe-eval' ajax.cloudflare.com www.googletagmanager.comm;"
-    />
+      <meta content="default-src 'self'; script-src 'self' 'unsafe-inline' ajax.cloudflare.com www.googletagmanager.com storage.googleapis.com; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self'; connect-src 'self' ajax.cloudflare.com www.googletagmanager.com storage.googleapis.com"
+            http-equiv="Content-Security-Policy"/>
+      <meta content="default-src 'self'; script-src 'self' 'unsafe-inline' ajax.cloudflare.com www.googletagmanager.com storage.googleapis.com; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self'; connect-src 'self' ajax.cloudflare.com www.googletagmanager.com storage.googleapis.com"
+            http-equiv="X-Content-Security-Policy"/>
+      <meta content="default-src 'self'; script-src 'self' 'unsafe-inline' ajax.cloudflare.com www.googletagmanager.com storage.googleapis.com; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self'; connect-src 'self' ajax.cloudflare.com www.googletagmanager.com storage.googleapis.com"
+            http-equiv="X-WebKit-CSP"/>
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Sakul6499 | Lukas Weber</title>
