--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Sakul6499 | Lukas Weber" />
-      <meta content="default-src 'self'; script-src 'self' ajax.cloudflare.com www.googletagmanager.com storage.googleapis.com static.cloudflareinsights.com; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self'; connect-src 'self' ajax.cloudflare.com www.googletagmanager.com storage.googleapis.com static.cloudflareinsights.com"
-            http-equiv="Content-Security-Policy"/>
-      <meta content="default-src 'self'; script-src 'self' ajax.cloudflare.com www.googletagmanager.com storage.googleapis.com static.cloudflareinsights.com; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self'; connect-src 'self' ajax.cloudflare.com www.googletagmanager.com storage.googleapis.com static.cloudflareinsights.com"
-            http-equiv="X-Content-Security-Policy"/>
-      <meta content="default-src 'self'; script-src 'self' ajax.cloudflare.com www.googletagmanager.com storage.googleapis.com static.cloudflareinsights.com; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self'; connect-src 'self' ajax.cloudflare.com www.googletagmanager.com storage.googleapis.com static.cloudflareinsights.com"
-            http-equiv="X-WebKit-CSP"/>
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<head>
+    <meta charset="utf-8"/>
+    <link href="%PUBLIC_URL%/favicon.ico" rel="shortcut icon"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <meta content="#000000" name="theme-color"/>
+    <meta content="Sakul6499 | Lukas Weber" name="description"/>
+    <meta content="default-src 'self'; script-src 'self' ajax.cloudflare.com static.cloudflareinsights.com; script-src-elem 'self' ajax.cloudflare.com static.cloudflareinsights.com; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self'; connect-src 'self' ajax.cloudflare.com static.cloudflareinsights.com"
+          http-equiv="Content-Security-Policy"/>
+    <meta content="default-src 'self'; script-src 'self' ajax.cloudflare.com static.cloudflareinsights.com; script-src-elem 'self' ajax.cloudflare.com static.cloudflareinsights.com; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self'; connect-src 'self' ajax.cloudflare.com static.cloudflareinsights.com"
+          http-equiv="X-Content-Security-Policy"/>
+    <meta content="default-src 'self'; script-src 'self' ajax.cloudflare.com static.cloudflareinsights.com; script-src-elem 'self' ajax.cloudflare.com static.cloudflareinsights.com; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self'; connect-src 'self' ajax.cloudflare.com static.cloudflareinsights.com"
+          http-equiv="X-WebKit-CSP"/>
+    <link href="logo192.png" rel="apple-touch-icon"/>
+    <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
     <title>Sakul6499 | Lukas Weber</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+</body>
 </html>
