--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="#000000" name="theme-color"/>
     <meta content="Sakul6499 | Lukas Weber" name="description"/>
-    <meta content="default-src 'self'; script-src 'self' ajax.cloudflare.com static.cloudflareinsights.com; script-src-elem 'self' ajax.cloudflare.com static.cloudflareinsights.com; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self'; connect-src 'self' ajax.cloudflare.com static.cloudflareinsights.com"
+    <meta content="default-src 'self'; script-src 'self' ajax.cloudflare.com; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self'; connect-src 'self' ajax.cloudflare.com"
           http-equiv="Content-Security-Policy"/>
-    <meta content="default-src 'self'; script-src 'self' ajax.cloudflare.com static.cloudflareinsights.com; script-src-elem 'self' ajax.cloudflare.com static.cloudflareinsights.com; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self'; connect-src 'self' ajax.cloudflare.com static.cloudflareinsights.com"
+    <meta content="default-src 'self'; script-src 'self' ajax.cloudflare.com; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self'; connect-src 'self' ajax.cloudflare.com"
           http-equiv="X-Content-Security-Policy"/>
-    <meta content="default-src 'self'; script-src 'self' ajax.cloudflare.com static.cloudflareinsights.com; script-src-elem 'self' ajax.cloudflare.com static.cloudflareinsights.com; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self'; connect-src 'self' ajax.cloudflare.com static.cloudflareinsights.com"
+    <meta content="default-src 'self'; script-src 'self' ajax.cloudflare.com; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self'; connect-src 'self' ajax.cloudflare.com"
           http-equiv="X-WebKit-CSP"/>
     <link href="logo192.png" rel="apple-touch-icon"/>
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
