Updated index.html to include 'localhost:8081' as CSP for 'content-src'

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,15 +7,15 @@
     <meta content="#000000" name="theme-color" />
     <meta content="Sakul6499 | Lukas Weber" name="description" />
     <meta
-      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' ajax.cloudflare.com; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self' data:; connect-src 'self' backend api.sakul6499.de ajax.cloudflare.com"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' ajax.cloudflare.com; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self' data:; connect-src 'self' localhost:8081 api.sakul6499.de ajax.cloudflare.com"
       http-equiv="Content-Security-Policy"
     />
     <meta
-      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' ajax.cloudflare.com; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self' data:; connect-src 'self' backend api.sakul6499.de ajax.cloudflare.com"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' ajax.cloudflare.com; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self' data:; connect-src 'self' localhost:8081 api.sakul6499.de ajax.cloudflare.com"
       http-equiv="X-Content-Security-Policy"
     />
     <meta
-      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' ajax.cloudflare.com; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self' data:; connect-src 'self' backend api.sakul6499.de ajax.cloudflare.com"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' ajax.cloudflare.com; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self' data:; connect-src 'self' localhost:8081 api.sakul6499.de ajax.cloudflare.com"
       http-equiv="X-WebKit-CSP"
     />
     <link href="logo192.png" rel="apple-touch-icon" />
