--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link href="%PUBLIC_URL%/favicon.ico" rel="shortcut icon" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta content="#000000" name="theme-color" />
-    <meta content="Sakul6499 | Lukas Weber" name="description" />
-    <meta
-      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' ajax.cloudflare.com; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self' data:; connect-src 'self' localhost:8081 api.sakul6499.de ajax.cloudflare.com"
-      http-equiv="Content-Security-Policy"
-    />
-    <meta
-      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' ajax.cloudflare.com; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self' data:; connect-src 'self' localhost:8081 api.sakul6499.de ajax.cloudflare.com"
-      http-equiv="X-Content-Security-Policy"
-    />
-    <meta
-      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' ajax.cloudflare.com; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self'; media-src 'self'; frame-src 'none'; font-src 'self' data:; connect-src 'self' localhost:8081 api.sakul6499.de ajax.cloudflare.com"
-      http-equiv="X-WebKit-CSP"
-    />
-    <link href="logo192.png" rel="apple-touch-icon" />
-    <link href="%PUBLIC_URL%/manifest.json" rel="manifest" />
-    <title>Sakul6499 | Lukas Weber</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link href="%PUBLIC_URL%/favicon.ico" rel="shortcut icon" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <meta content="#000000" name="theme-color" />
+  <meta content="Sakul6499 | Lukas Weber" name="description" />
+  <meta
+    content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' ajax.cloudflare.com; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; media-src 'self'; frame-src 'none'; font-src 'self' data:; connect-src 'self' localhost:8081 api.sakul6499.de ajax.cloudflare.com"
+    http-equiv="Content-Security-Policy" />
+  <meta
+    content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' ajax.cloudflare.com; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; media-src 'self'; frame-src 'none'; font-src 'self' data:; connect-src 'self' localhost:8081 api.sakul6499.de ajax.cloudflare.com"
+    http-equiv="X-Content-Security-Policy" />
+  <meta
+    content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' ajax.cloudflare.com; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; media-src 'self'; frame-src 'none'; font-src 'self' data:; connect-src 'self' localhost:8081 api.sakul6499.de ajax.cloudflare.com"
+    http-equiv="X-WebKit-CSP" />
+  <link href="logo192.png" rel="apple-touch-icon" />
+  <link href="%PUBLIC_URL%/manifest.json" rel="manifest" />
+  <title>Sakul6499 | Lukas Weber</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
